# esp-idf-ftpClient

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_example.csv  partitions_example.csv.esp32  partitions_example_fatfs.csv  partitions_example_littlefs.csv  partitions_example_spiffs.csv  sdkconfig.defaults
components/ftpClient/: CMakeLists.txt  FtpClient.c  FtpClient.h
main/: CMakeLists.txt  FtpClient.c  Kconfig.projbuild  Kconfig.projbuild.dlptest  main.c
python-ftp-server/: README.md  main.py
test/: CMakeLists.txt  Makefile  partitions_example.csv  sdkconfig.defaults
test/main/: CMakeLists.txt  Kconfig.projbuild
