set(TARGET_FILE "${CMAKE_SOURCE_DIR}/partitions_example.csv")
message(STATUS ${TARGET_FILE})
if(CONFIG_SPIFFS)
        message(STATUS "CONFIG_SPIFFS")
        set(SOURCE_FILE "${CMAKE_SOURCE_DIR}/partitions_example_spiffs.csv")
        message(STATUS ${SOURCE_FILE})
		file(COPY_FILE ${SOURCE_FILE} ${TARGET_FILE})
elseif(CONFIG_FATFS)
        message(STATUS "CONFIG_FATFS")
        set(SOURCE_FILE "${CMAKE_SOURCE_DIR}/partitions_example_fatfs.csv")
        message(STATUS ${SOURCE_FILE})
		file(COPY_FILE ${SOURCE_FILE} ${TARGET_FILE})
elseif(CONFIG_LITTLEFS)
        message(STATUS "CONFIG_FATFS")
        set(SOURCE_FILE "${CMAKE_SOURCE_DIR}/partitions_example_littlefs.csv")
        message(STATUS ${SOURCE_FILE})
		file(COPY_FILE ${SOURCE_FILE} ${TARGET_FILE})
endif()
idf_component_register(SRCS "main.c" INCLUDE_DIRS ".")
